src/regression/parse_pool/progtest13.sfp.out

sfc in program: parse_pool/progtest13.sfp
syntax error at 5 at line:
from any goto foo when bar nor bar
                           ^
