src/regression/parse_pool/progtest13.sfp
# Testing erroneous program definition (invalid or operator)
configuration foo { nothing nothing }
event-condition bar { timer = 8192 }

from any goto foo when bar nor bar

start foo

